fixed bug with z-index and change elements sizes

--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -24,6 +24,7 @@
   padding-top: 1rem;
   display: flex;
   justify-content: space-between;
+  z-index: 5;
 }
 
 .home__nav--brd-btm-grey {
@@ -120,23 +121,26 @@
 .user-list__line {
   display: flex;
   align-items: center;
-  padding: 2rem 2rem 0.4rem;
+  padding: 1rem 2rem 1rem;
   border-bottom: 1px solid #eeeaea86;
+  position: relative;
+  z-index: 100;
 }
 
 .user-list__line:hover {
-  background-color: #88888886;
+  background-color: #e8e8e8;
   opacity: 80%;
 }
 
 .user-list__line:last-child {
-  padding-bottom: 2rem;
   border-bottom: none;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
 .user-list__line__img {
   display: inline-block;
-  width: 4rem;
+  width: 3rem;
   height: auto;
   border-radius: 50%;
 }
@@ -144,16 +148,16 @@
 
 .user-list__line__name {
   display: flex;
-  gap: 10px;
+  gap: 5px;
 }
 
 .user-list__line__name p:first-child {
-  padding-left: 3rem;
+  padding-left: 1.3rem;
 }
 
 .line__name__text {
   display: inline-block;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: 450;
 }
 
@@ -177,9 +181,9 @@
 
 .left-aside__user-line:hover {
   cursor: pointer;
-  background-color: #a7a7a786;
+  opacity: 75%;
+  box-shadow: 0px 0px 16px -2px rgba(66, 68, 90, 1);
   border-radius: 5px;
-  border-bottom: none;
 }
 
 .left-aside__user-line__profile-picture {
@@ -220,9 +224,9 @@
 
 .left-aside__find-friends:hover {
   cursor: pointer;
-  background-color: #a7a7a786;
+  opacity: 75%;
+  box-shadow: 0px 0px 16px -2px rgba(66, 68, 90, 1);
   border-radius: 5px;
-  border-bottom: none;
 }
 
 .left-aside__find-friends__text {
